--- a/react/flux/todo/src/styles/App.css
+++ b/react/flux/todo/src/styles/App.css
@@ -1,28 +1,22 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.title {
+  background-color: black;
   color: white;
+  height: 100%;
+  width: 100%;
+  display: block;
+  padding: .5rem .5rem 0 .5rem;
+  font-weight: bolder;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.update-input {
+  margin-right: 20px;
+  width: 41%;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
 }
